# similarity

./: .gitignore  README.md  pyproject.toml  runner.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
similarity/: _match_peaks.c  cli.py  experiment.py  grouping.py  legacy.py  output.py  prediction.py  scoring.py  utils.py
similarity/utils/: abc.py  config.py  utils.py
similarity/utils/cache/: __init__.py  common.py  diskcache.py  redis.py
similarity/utils/spectrum_collection/: __init__.py  cached.py  sharedarray.py
tests/: 10k_peptides.txt  test_cli.py  test_experiment.py  test_match_peaks.py  test_peptides.txt  test_peptides_1.txt  test_peptides_2.txt  test_peptides_ptms.txt
