[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "similarity"
version = "0.2"
description = "Predict mass spectra of peptides and measure their similarity"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Lev Levitsky", email = "levitsky@bmb.sdu.dk"},
    {name = "Charlotte Adams", email = "Charlotte.Adams@uantwerpen.be"}
]
keywords = ["mass spectrometry", "peptides", "spectra", "similarity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "koinapy",
    "tritonclient[grpc]",  # for koinapy
    "pyteomics.cythonize",
    "pyteomics @ git+https://github.com/levitsky/pyteomics.git",
    "lxml",
    "scipy",
    "diskcache",
    "pandas",
    # spectram_similarity is not installable via pip yet
    # "spectral_similarity @ git+https://github.com/jlapin1/spectral_similarity"
]

[project.urls]

[project.scripts]
run = "similarity.cli:experiment"
time_scoring = "similarity.cli:time_scoring"

[tool.setuptools]
packages = ["similarity"]

